--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -26,6 +26,54 @@
     <%= f.label :date_of_birth %><br>
     <%= f.text_field :date_of_birth %>
   </div>
+  <div class="email">
+    <%= f.label :email_id%><br>
+    <%= f.text_field :email_id %>
+  </div>
+  <div class="field">
+    <%= f.label :mobile_no%><br>
+    <%= f.text_field :mobile_no %>
+  </div>
+  <div class="field">
+    <%= f.label :address%><br>
+    <%= f.text_field :address %>
+  </div>
+  <div class="field">
+    <%= f.label :city%><br>
+    <%= f.text_field :city %>
+  </div>
+  <div class="field">
+    <%= f.label :pincode%><br>
+    <%= f.text_field :pincode %>
+  </div>
+  <div class="field">
+    <%= f.label :state%><br>
+    <%= f.text_field :state %>
+  </div>
+  <div class="field">
+    <%= f.label :photo%><br>
+    <%= f.text_field :photo %>
+  </div>
+  <div class="field">
+    <%= f.label :address_proof%><br>
+    <%= f.text_field :address_proof %>
+  </div>
+  <div class="field">
+    <%= f.label :setup_box_id%><br>
+    <%= f.text_field :setup_box_id %>
+  </div>
+  <div class="field">
+    <%= f.label :zone%><br>
+    <%= f.text_field :zone %>
+  </div>
+  <div class="field">
+    <%= f.label :plan%><br>
+    <%= f.text_field :plan %>
+  </div>
+  <div class="field">
+    <%= f.label :customer_id%><br>
+    <%= f.text_field :customer_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
