--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,69 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+.cleft { float: left; padding: 20px 0 20px 20px; width: 200px; }
+.cleft h3 { 
+-webkit-border-radius: 7px;
+-moz-border-radius: 7px;
+border-radius: 7px; 
+font-size: 12px; 
+font-weight: bold; 
+color: #fff; 
+background: #6a9d84; 
+padding: 3px 10px; 
+}
+.cleft ul { margin: 0; padding: 0; list-style-type: none; }
+.cleft ul li { margin: 0 0 5px 0; color: #fff; }
+.cleft ul li a { 
+-webkit-border-radius: 7px;
+-moz-border-radius: 7px;
+border-radius: 7px; 
+font-size: 12px; 
+display: block; 
+text-decoration: none; 
+color: #fff; 
+background: #7599a9; 
+padding: 3px 10px; 
+color: #fff; 
+}
+.cleft ul li a:hover { background: #3D8EA9; }
+
+.cright { 
+-webkit-border-top-right-radius: 7px;
+-webkit-border-bottom-right-radius: 7px;
+-moz-border-radius-topright: 7px;
+-moz-border-radius-bottomright: 7px;
+border-top-right-radius: 7px;
+border-bottom-right-radius: 7px;
+border-left: 1px solid #e9e9e9; 
+background: #fff;
+float: right; 
+padding: 0 20px 20px 20px; 
+width: 700px; }
+.cright h2 { 
+-webkit-border-radius: 7px;
+-moz-border-radius: 7px;
+border-radius: 7px; 
+background: #fffaae; 
+padding: 10px; 
+font-weight: normal; 
+color: #585858;
+letter-spacing: -1px;
+font-weight: bold;
+margin: 20px -10px 10px -10px;
+}
+
+#footer { 
+background-image:url(header.jpg);
+width:auto;
+color: #fff;
+padding: 10px;
+}
+#footer a { color: #fff; text-decoration: none; border-bottom: 1px dotted #fff; }
+#footer a:hover { border-bottom: 1px dotted #ccc; }
+
+.left { float: left; }
+.right { float: right; }
+.clear { clear: both; padding: 0 0 10px 0; }
