--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,12 +1,43 @@
-<table class="table table-striped">
-	<tr>
-		<td>First Name</td>
-		<td>Last Name</td>
-	</tr>
-<% @customers.each do |customer|%>
-	<tr>
-		<td><%= customer.first_name%></td>
-		<td><%= customer.last_name%></td>
-	</tr>
-<%end%>
-</table>
+<div class="clear"> </div>
+</div>
+
+<div id="contentwrap">
+	<div class="cright">
+		<h2>Customer Details</h2><br/>
+		<form action="" method="post" enctype="multipart/form-data" class="form-inline" id="form1">
+		  <p><div class="well well-sm"><b>Search Customer</b></div></p><br/>
+		<div class="form-group">  
+		    <label  for="firstName">Name:</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		    <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name" />
+		  </div>    
+		   <div class="form-group">    
+		    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" />
+		    </div> <br/> <br/>
+		  <div class="form-group"> 
+		    <label for="customerID">Customer Id:</label>&nbsp; &nbsp; 
+		    <input class="form-control" type="text" name="customerID" id="customerID" placeholder="Customer Id" />
+		    </div><br/><br/>
+		     <div class="form-group"> 
+		    <label for="mobileNo">Mobile No.:</label>&nbsp; &nbsp; &nbsp; 
+		    <input class="form-control" type="text" name="mobileNo" id="mobileNo" placeholder="Mobile No" />
+		    </div>  <br/> <br/>
+		  <p>
+		    <input type="submit" name="search" class="btn btn-info " id="search" value="Search" />
+		  </p>
+		</form>
+		<p>&nbsp;</p>
+		<div class="clear"></div>
+	</div>
+
+	<div class="cleft">
+		<ul>
+			<li><a href="AddUser.html">Add New Customer</a></li>
+			<li><a href="AddNewZone.html">Add New Zone</a></li>
+			<li><a href="CustomerDetails.html">Customer details</a></li>
+			<li><a href="#">Employee Contacts</a></li>
+			<li><a href="#">Pending Complains</a></li>
+		</ul>
+	</div>
+	<div class="clear"> </div>
+</div>
+<div class="clear"> </div>
