--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,13 @@
-<div id="footer">
+<nav class="navbar navbar-fixed-bottom">
+	<div id="footer">
+		<div class="left">
+			Copyright &copy; 2016 by <a href="#">SSTD</a>
+		</div>
 
-<div class="left">
-Copyright &copy; 2016 by <a href="#">SSTD</a>
-</div>
-
-<div class="right">
-  <p>
-             Design by <a href="">Vidhwath</a>
-    </p>
-</div>
+		<div class="right">
+		  <p>
+		             Design by <a href="">Vidhwath</a>
+		    </p>
+		</div>
+	</div>	
+</nav>
