--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,58 @@
-body{
-	background: url('background.jpg');
-	background-size: 100% 100%;
+body { 
+	font-family: 'Open Sans', sans-serif;
+	background: url(background.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: 0;
+	padding: 0; 
+	color: #3f3f3f;
+	font-size: 14px;
+	line-height: 24px;
 }
 
+#contentwrap {
+/*	width: 900px;
+	margin-left: 300px;*/
+}
+
+.container_main {
+	width: 80%;
+	margin-left: 20%;
+	margin-top: 2%;
+	margin-right: 1%;
+	border: 1px solid #c9c9c9;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px;	
+	height: 400px;
+}
+
+.cright { 
+/*	-webkit-border-top-right-radius: 7px;
+	-webkit-border-bottom-right-radius: 7px;
+	-moz-border-radius-topright: 7px;
+	-moz-border-radius-bottomright: 7px;
+	border-top-right-radius: 7px;
+	border-bottom-right-radius: 7px;
+	border-left: 1px solid #e9e9e9; 
+	background: #fff;
+	float: right; 
+	padding: 0 20px 20px 20px; 
+	width: 700px;*/
+ }
+
+
+.cright h2 { 
+/*	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px; 
+	background: #fffaae; 
+	padding: 10px; 
+	font-weight: normal; 
+	color: #585858;
+	letter-spacing: -1px;
+	font-weight: bold;
+	margin: 20px -10px 10px -10px;*/
+}
