--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,3 @@
-<!-- 
-
 <%= form_for(@customer) do |f| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
@@ -80,144 +78,126 @@
     <%= f.submit %>
   </div>
 <% end %>
- -->
+ </div>
 
 
-
-
-
-<!DOCTYPE HTML>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="Simple Template #2 from simpletemplates.org" />
-<meta name="keywords" content="simple #2, template, simpletemplates.org" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-<title>SSTD</title>
-</head>
-<body>
-<div class="clear"> </div>
+<!-- <div class="clear"> </div>
 
 </div>
 
 <div id="contentwrap">
 
-<div class="cright">
+  <div class="cright">
 
-<h2>Add New Customer</h2><br/>
+  <h2>Add New Customer</h2><br/>
 
-<form action="" method="post" enctype="multipart/form-data" class="form-inline" id="form1" >
-<p><div class="well well-sm"><b>Personal Information</b></div></p><br/>
-  <div class="form-group">  
-    <label  for="firstName">Name</label>
-    <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name" />
-  </div> 
-  <div class="form-group">      
-    <input type="text" class="form-control" name="middleName" id="middleName" placeholder="Middle Name" />
-   </div> 
-   <div class="form-group">    
-    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" />
-    </div> <br/> <br/>
-  </p> 
-  <div class="dropdown">
-    <label  for="Date">Date Of Birth</label> &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
-  <input type="date" class="form-control" name="dob" id="dob" placeholder="MM/DD/YYYY">    
-  </div> <br/>
-  <p>
-  <div class="form-group">   
-    <label  for="emailId">Email-id</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  
-    <input type="text"  class="form-control" name="emailId" id="emailId" placeholder="Email Id"/>
-   </div>  <br/> <br/>
-   <div class="form-group">   
-    <label  for="mobileNo">Mobile No.</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
-    <input type="text" class="form-control" name="mobileNo" id="mobileNo" placeholder="Mobile No"/>
-    </div>  <br/> <br/>
-  </p>
-  <p>
+  <form action="" method="post" enctype="multipart/form-data" class="form-inline" id="form1" >
+  <p><div class="well well-sm"><b>Personal Information</b></div></p><br/>
+    <div class="form-group">  
+      <label  for="firstName">Name</label>
+      <input type="text" class="form-control" name="firstName" id="first_name" placeholder="First Name" />
+    </div> 
+    <div class="form-group">      
+      <input type="text" class="form-control" name="middleName" id="middleName" placeholder="Middle Name" />
+     </div> 
+     <div class="form-group">    
+      <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" />
+      </div> <br/> <br/>
+    </p> 
+    <div class="dropdown">
+      <label  for="Date">Date Of Birth</label> &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
+    <input type="date" class="form-control" name="dob" id="dob" placeholder="MM/DD/YYYY">    
+    </div> <br/>
+    <p>
+    <div class="form-group">   
+      <label  for="emailId">Email-id</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  
+      <input type="text"  class="form-control" name="emailId" id="emailId" placeholder="Email Id"/>
+     </div>  <br/> <br/>
      <div class="form-group">   
-    <label for="address">Address</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <textarea name="address" class="form-control" id="address" cols="45" rows="5"></textarea>
-    </div>  <br/> <br/>
-  </p>
-  <p>
-     <div class="form-group">   
-    <label for="city">City</label>&nbsp; &nbsp; 
-    <input type="text" class="form-control" name="city" id="city" placeholder="City"/>
-    </div>  &nbsp; &nbsp; &nbsp; &nbsp;  
-   <div class="form-group">   
-    <label for="pincode">Pincode</label>&nbsp; 
-    <input type="text"  class="form-control" name="pincode" id="pincode" placeholder="Pincode" />
-    </div>  <br/> <br/>
+      <label  for="mobileNo">Mobile No.</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
+      <input type="text" class="form-control" name="mobileNo" id="mobileNo" placeholder="Mobile No"/>
+      </div>  <br/> <br/>
+    </p>
+    <p>
        <div class="form-group">   
-    <label for="state">State</label>&nbsp; 
-    <input type="text" class="form-control" name="state" id="state" placeholder="State" />
-    </div>  <br/> <br/>
-  </p>
-  <p><div class="well well-sm"><b>KYC Information</b></div></p><br/><p>  
-   <div class="form-group">   
-    <label for="photo">Upload Photo</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <input type="file" class="form-control" name="photo" id="photo" placeholder="Photo"/>
-    </div> <br/> <br/>
-  </p>
-  <p>
-   <div class="form-group"> 
-    <label for="addProof">Upload Address Proof</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <input type="file" class="form-control" name="addProof" id="addProof" placeholder="Address Proof"/>
-    </div> <br/> <br/>
-  </p>
-  <p>
-   <div class="form-group"> 
-    <label for="setupboxID">Setup Box Id</label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <input type="file" class="form-control" name="setupboxID" id="setupboxID" placeholder="Setup Box Id" />
-    </div> <br/> <br/>
-  </p>
-  <p>
-  <div class="well well-sm"><b>Account Information</b></div> </p><br/>
-  <p>
-  <div class="form-group"> 
-    <label for="zone">Zone</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <select class="form-control" name="zone" id="zone">    
-    </select>
-    </div> <br /> <br />
+      <label for="address">Address</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <textarea name="address" class="form-control" id="address" cols="45" rows="5"></textarea>
+      </div>  <br/> <br/>
+    </p>
+    <p>
+       <div class="form-group">   
+      <label for="city">City</label>&nbsp; &nbsp; 
+      <input type="text" class="form-control" name="city" id="city" placeholder="City"/>
+      </div>  &nbsp; &nbsp; &nbsp; &nbsp;  
+     <div class="form-group">   
+      <label for="pincode">Pincode</label>&nbsp; 
+      <input type="text"  class="form-control" name="pincode" id="pincode" placeholder="Pincode" />
+      </div>  <br/> <br/>
+         <div class="form-group">   
+      <label for="state">State</label>&nbsp; 
+      <input type="text" class="form-control" name="state" id="state" placeholder="State" />
+      </div>  <br/> <br/>
+    </p>
+    <p><div class="well well-sm"><b>KYC Information</b></div></p><br/><p>  
+     <div class="form-group">   
+      <label for="photo">Upload Photo</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <input type="file" class="form-control" name="photo" id="photo" placeholder="Photo"/>
+      </div> <br/> <br/>
+    </p>
+    <p>
+     <div class="form-group"> 
+      <label for="addProof">Upload Address Proof</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <input type="file" class="form-control" name="addProof" id="addProof" placeholder="Address Proof"/>
+      </div> <br/> <br/>
+    </p>
+    <p>
+     <div class="form-group"> 
+      <label for="setupboxID">Setup Box Id</label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <input type="file" class="form-control" name="setupboxID" id="setupboxID" placeholder="Setup Box Id" />
+      </div> <br/> <br/>
+    </p>
+    <p>
+    <div class="well well-sm"><b>Account Information</b></div> </p><br/>
+    <p>
     <div class="form-group"> 
-    <label for="plan">Plan</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <select class="form-control" name="plan" id="plan">
-    </select>
-    </div><br /> <br />
-  </p>
+      <label for="zone">Zone</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <select class="form-control" name="zone" id="zone">    
+      </select>
+      </div> <br /> <br />
+      <div class="form-group"> 
+      <label for="plan">Plan</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <select class="form-control" name="plan" id="plan">
+      </select>
+      </div><br /> <br />
+    </p>
+    <p>
+     <div class="form-group"> 
+      <label for="customerID">Customer ID</label>&nbsp; 
+      <input type="text" class="form-control" name="customerID" id="customerID" placeholder="Customer ID"/>   
+      </div>
+      <button type="button" name="generate" id="generate" class="btn btn-success">Generate</button>
+    </p><br/><br/>
   <p>
-   <div class="form-group"> 
-    <label for="customerID">Customer ID</label>&nbsp; 
-    <input type="text" class="form-control" name="customerID" id="customerID" placeholder="Customer ID"/>   
-    </div>
-    <button type="button" name="generate" id="generate" class="btn btn-success">Generate</button>
-  </p><br/><br/>
-<p>
- <div class="form-group" >  
-<button  type="button" id="submitNewCustomer"   class="btn btn-info ">Submit</button>  
-</div>
-</p>
-</form>
-<p>&nbsp;</p>
+   <div class="form-group" >  
+  <button  type="button" id="submitNewCustomer"   class="btn btn-info ">Submit</button>  
+  </div>
+  </p>
+  </form>
+  <p>&nbsp;</p>
 
 
-<div class="clear"></div>
+  <div class="clear"></div>
 </div>
 
 <div class="cleft">
 
-<ul>
-<li><a href="AddUser.html">Add New Customer</a></li>
-<li><a href="AddNewZone.html">Add New Zone</a></li>
-<li><a href="CustomerDetails.html">Customer details</a></li>
-<li><a href="#">Employee Contacts</a></li>
-<li><a href="#">Pending Complaints</a></li>
-</ul>
+  <ul>
+  <li><a href="AddUser.html">Add New Customer</a></li>
+  <li><a href="AddNewZone.html">Add New Zone</a></li>
+  <li><a href="CustomerDetails.html">Customer details</a></li>
+  <li><a href="#">Employee Contacts</a></li>
+  <li><a href="#">Pending Complaints</a></li>
+  </ul>
 
 </div>
 
@@ -232,4 +212,4 @@
 </div>
 
 </body>
-</html>
+</html> -->
