--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css' />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="Simple Template #2 from simpletemplates.org" />
-<meta name="keywords" content="simple #2, template, simpletemplates.org" />
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<%= render 'layouts/header' if user_signed_in?  %>
-<body>
-	<%= yield %>
-<%= render 'layouts/footer'  if user_signed_in? %>
-</body>
+	<head>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css' />
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Simple Template #2 from simpletemplates.org" />
+	<meta name="keywords" content="simple #2, template, simpletemplates.org" />
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<%= render 'layouts/header' if user_signed_in?  %>
+	<body>
+		<%= render 'layouts/side_bar' if user_signed_in? %>
+		<%= yield %>
+		<%= render 'layouts/footer'  if user_signed_in? %>
+	</body>
 </html>
