Login Page fixup

--- a/app/views/zones/new.html.erb
+++ b/app/views/zones/new.html.erb
@@ -1,83 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="Simple Template #2 from simpletemplates.org" />
-<meta name="keywords" content="simple #2, template, simpletemplates.org" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-<title>SSTD</title>
-</head>
-<body>
-
-
-
-<div class="clear"> </div>
-
-</div>
-
-<div id="contentwrap">
-
-<div class="cright">
-
-<h2>Add New Zone</h2><br/>
-
-<form action="" method="post" enctype="multipart/form-data" class="form-inline" id="form1">
-  <table class="table table-bordered" width="659" border="1">
-    <tr class="success">
-      <th width="60" height="27" scope="col">&nbsp;</th>
-      <th width="99" scope="col">Zone</th>
-      <th width="174" scope="col">Zone Engineer</th>
-      <th width="284" scope="col">Comments</th>
-    </tr>
-    <tr>
-      <th height="27" scope="col"><input type="radio" name="radio" id="s1" value="s1" />
-        <label for="s1"></label></th>
-      <th scope="col">&nbsp;</th>
-      <th scope="col">&nbsp;</th>
-      <th scope="col">&nbsp;</th>
-    </tr>
-  </table>
-  <p>&nbsp;</p>
-  <p>
-    <input type="submit" class="btn btn-primary" name="addzones" id="addzones" value="Add Zone"  />
-    <input type="submit" class="btn btn-danger" name="deletezone" id="deletezone" value="Delete Zone" />
-</p>
-  <p>&nbsp;</p>
-</form>
-<p>&nbsp;</p>
-
-<div class="clear"></div>
-</div>
-
-<div class="cleft">
-
-<ul>
-<li><a href="AddUser.html">Add New Customer</a></li>
-<li><a href="AddNewZone.html">Add New Zone</a></li>
-<li><a href="CustomerDetails.html">Customer Search</a></li>
-</ul>
-<ul>
-  <li><a href="#">Employee Contacts</a></li>
-<li><a href="#">Pending Complains</a></li>
-</ul>
-
-</div>
-
-<div class="clear"> </div>
-
-</div>
-
-
-
-<div class="clear"> </div>
-
-</div>
-
-</body>
-</html>
+<h1>New Zone</h1>
