--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -4,11 +4,16 @@ body.devise{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 40%;
+  margin: 0 auto;
+  margin-top: 200px;
 }
 
 .sign_in {
     text-align: center;
-    background-color: rgba(192,192,192,0.3);
+    background: rgba(255,255,255,0.7);
     position: relative;
     vertical-align: middle;
+    padding: 30px 40px;
+    border-radius: 3px;
 }
