--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,7 +1,8 @@
 .navbar {
    background-color: transparent;
-   background: rgba(0,0,0,0.5);
+   background: rgba(0,0,0,0.2);
    border-color: transparent;
+   margin-bottom: 20px;
 }
 
 
