--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,21 +12,17 @@ body {
 	line-height: 24px;
 }
 
-#contentwrap {
-/*	width: 900px;
-	margin-left: 300px;*/
-}
-
 .container_main {
+	background-color: #fff;
 	width: 80%;
 	margin-left: 20%;
 	margin-top: 2%;
-	margin-right: 1%;
 	border: 1px solid #c9c9c9;
 	-webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
 	border-radius: 7px;	
-	height: 400px;
+	height: 100%;
+	color: #000;
 }
 
 .cright { 
