--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,13 @@
 	<%= render 'layouts/header' if user_signed_in?  %>
 	<body>
 		<%= render 'layouts/side_bar' if user_signed_in? %>
-		<%= yield %>
+		<% if user_signed_in? %>
+			<div class="container_main">
+				<%= yield %>
+			</div>
+		<%else%>
+			<%= yield %>
+		<%end%>	
 		<%= render 'layouts/footer'  if user_signed_in? %>
 	</body>
 </html>
