Customer display page added

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,7 +15,7 @@ body {
 .container_main {
 	background-color: #fff;
 	width: 80%;
-	margin-left: 20%;
+	margin-left: 18%;
 	margin-top: 2%;
 	border: 1px solid #c9c9c9;
 	-webkit-border-radius: 7px;
@@ -23,6 +23,7 @@ body {
 	border-radius: 7px;	
 	height: 100%;
 	color: #000;
+	padding: 25px;
 }
 
 .cright { 
