--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
 	 <div id="topmenu">
 		<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/zones/index">Zone Management</a></li>
+			<li><a href="/zones/index">Payment status</a></li>
 			<li><a href="#">Package</a></li>
 			<li><a href="#">Inventory</a></li>
 			<li><%= link_to "Logout", destroy_user_session_path , method: :delete%></li>   
