--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -1,8 +1,7 @@
 <div class="cleft">
 	<ul>
-		<li><a href="/customers/new">Add New Customer</a></li>
-		<li><a href="/zones/new">Add New Zone</a></li>
-		<li><a href="/customers">Customer Search</a></li>
+		<li><a href="/customers">Customer Managment</a></li>
+		<li><a href="/zones/index">Zone Managment</a></li>
 	</ul>
 	<ul>
 		<li><a href="#">Employee Contacts</a></li>
