--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,7 +1,8 @@
-<%= form_for(@customer) do |f| %>
+<center><h1>Add Customer</h1></center>
+<%= bootstrap_form_for(@customer,layout: :horizontal,:html => { :multipart => true } )do |f| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@demo.errors.count, "error") %> prohibited this demo from being saved:</h2>
+      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
       <ul>
       <% @customer.errors.full_messages.each do |message| %>
@@ -10,75 +11,25 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
-    <%= f.label :first_name%><br>
+  <% @zone = Zone.all %>
     <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :middle_name %><br>
     <%= f.text_field :middle_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :date_of_birth %><br>
-    <%= f.text_field :date_of_birth %>
-  </div>
-  <div class="email">
-    <%= f.label :email_id%><br>
-    <%= f.text_field :email_id %>
-  </div>
-  <div class="field">
-    <%= f.label :mobile_no%><br>
-    <%= f.text_field :mobile_no %>
-  </div>
-  <div class="field">
-    <%= f.label :address%><br>
-    <%= f.text_field :address %>
-  </div>
-  <div class="field">
-    <%= f.label :city%><br>
+    <%= f.date_field :date_of_birth %>
+    <%= f.email_field :email_id %>
+    <%= f.phone_field :mobile_no %>
+    <%= f.text_area :address %>
     <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :pincode%><br>
     <%= f.text_field :pincode %>
-  </div>
-  <div class="field">
-    <%= f.label :state%><br>
     <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :photo%><br>
-    <%= f.text_field :photo %>
-  </div>
-  <div class="field">
-    <%= f.label :address_proof%><br>
-    <%= f.text_field :address_proof %>
-  </div>
-  <div class="field">
-    <%= f.label :setup_box_id%><br>
-    <%= f.text_field :setup_box_id %>
-  </div>
-  <div class="field">
-    <%= f.label :zone%><br>
-    <%= f.text_field :zone %>
-  </div>
-  <div class="field">
-    <%= f.label :plan%><br>
+    <%= f.file_field :photo %>
+    <%= f.file_field :address_proof %>
+    <%= f.select :zone, @zone.map{|i| i.zone_engineer}, :prompt => 'Select one'%>
+    <%= f.file_field :setup_box_id %>
     <%= f.text_field :plan %>
-  </div>
-  <div class="field">
-    <%= f.label :customer_id%><br>
     <%= f.text_field :customer_id %>
-  </div>
-  <div class="actions">
     <%= f.submit %>
-  </div>
 <% end %>
- </div>
 
 
 <!-- <div class="clear"> </div>
