--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,8 @@
 <div class="cright">
-	<h2>Sanju Star TV</h2>
-	<%= image_tag('doc.jpg') %>
+	<h2>Welcome to Sanju Star TV</h2>
+	<!--<%= image_tag('doc.jpg') %> -->
 
-	<p>Second template from Simple Templates is featuring a header with h1 tag suitable for site name and floating menu on the right. Content area consists of two columns. On the right there is a menu with categories and links and on the right you will find main content area where you can put article body.</p>
-
-	<p>No images were used for a design. This is pure xhtml/css template with some added css3 rounded corners.</p>
-	<h2>License &amp; Terms of Use</h2>
-	<p>All templates published and available for free from skdncksdjfj.org are released and licensed underse.</p>
-	<p>All we ask is for you to keep the link to simpletemplates.org in the footer intact credit us in some other way.</p>
-	<p>asdndsnmnas fcdsjrfck fakslmdcmafkjfc jdnf jfjnd sdjfk  jfkd jfkjdk kjs ksmdkcdjkfj kdsfnmn.</p> 
+	<p></p>
 </div>
 
 
