--- a/app/views/zones/index.html.erb
+++ b/app/views/zones/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Zones#index</h1>
-<p>Find me in app/views/zones/index.html.erb</p>
+<% @zones.each do |zone| %>
+	<%=  @zone.engineer %>
+	<%= @zone.contact %>
+	<%= @zone.comments %>
+<% end %>
