--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-bottom">
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
 	<div id="footer">
 		<div class="left">
 			Copyright &copy; 2016 by <a href="#">SSTD</a>
