--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="cleft">
 	<ul>
 		<li><a href="/customers">Customer Managment</a></li>
-		<li><a href="/zones/index">Zone Managment</a></li>
+		<li><a href="/zones">Zone Managment</a></li>
 	</ul>
 	<ul>
 		<li><a href="#">Employee Contacts</a></li>
