--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,19 +1,20 @@
 <h1>Customer</h1><br>
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
 	<tr>
 		<th>Customer Id </th>
 		<th>First Name</th>
-		<th>Zone</th>
+		<th>Zone Engineer</th>
 	</tr>
 	<% @customers.each do |customer| %>
 		<tr>
-			<td><%= customer.customer_id%></td>
+			<td><%= customer.id%></td>
 			<td><%= customer.first_name %></td>
-			<td><%= customer.zone%></td>
+			<td><%= customer.zone.engineer%></td>
 			<td><%= link_to 'Show', customer %></td>
 		</tr>
 	<% end %>
 </table> 
 
 
-<%= button_to('Add Customer', new_customer_path, :class => 'btn btn-large btn-primary',:method => :get)  %>
+<%= button_to('Add Customer', new_customer_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
+<%= button_to('Download as Excel', customers_path(:format => :xls),:class => 'btn btn-large btn-primary',:method => 'get')%>
