--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -1,10 +1,11 @@
 <div class="cleft">
 	<ul>
-		<li><a href="/customers">Customer Managment</a></li>
+		
 		<li><a href="/zones">Zone Managment</a></li>
 	</ul>
 	<ul>
-		<li><a href="#">Employee Contacts</a></li>
-		<li><a href="#">Complains log</a></li>
+		<li><a href="/inventories">Inventory Managment</a></li>
+		<li><a href="/employees">Employee Managment</a></li>
+		<li><a href="/complaints">Complains log</a></li>
 	</ul>
 </div>
