--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Customer</h1><br>
+<%= button_to('Download as Excel', customers_path(:format => :xls),:class => 'btn btn-large btn-primary',:method => 'get')%>
+
 <table class="table table-striped table-bordered">
 	<tr>
 		<th>Customer Id </th>
@@ -11,10 +13,9 @@
 			<td><%= customer.first_name %></td>
 			<td><%= customer.zone.engineer%></td>
 			<td><%= link_to 'Show', customer %></td>
+			<td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+			<td><%= link_to 'Destroy', customer,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
 
-
-<%= button_to('Add Customer', new_customer_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
-<%= button_to('Download as Excel', customers_path(:format => :xls),:class => 'btn btn-large btn-primary',:method => 'get')%>
