--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,160 +1,3 @@
 <center><h1>Add Customer</h1></center><br>
-<%= bootstrap_form_for(@customer,layout: :horizontal,:html => { :multipart => true } )do |f| %>
-  <% if @customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
-      <ul>
-      <% @customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-    <%= f.text_field :first_name %>
-    <%= f.text_field :last_name %>
-    <%= f.date_select :date_of_birth %>
-    <%= f.email_field :email_id %>
-    <%= f.phone_field :mobile_no %>
-    <%= f.text_area :address %>
-    <%= f.file_field :photo %>
-    <%= f.file_field :address_proof %>
-    <%= f.file_field :setup_box_id %>
-    <%= f.collection_select :zone_id, @zones, :id,:engineer,:prompt => "Select zone Engineer"%>
-    <%= f.collection_select :plan_id, @plans, :id,:name, :prompt => "Select one Plan"%>
-    <%= f.submit %>
-<% end %>
-
-
-<!-- <div class="clear"> </div>
-
-</div>
-
-<div id="contentwrap">
-
-  <div class="cright">
-
-  <h2>Add New Customer</h2><br/>
-
-  <form action="" method="post" enctype="multipart/form-data" class="form-inline" id="form1" >
-  <p><div class="well well-sm"><b>Personal Information</b></div></p><br/>
-    <div class="form-group">  
-      <label  for="firstName">Name</label>
-      <input type="text" class="form-control" name="firstName" id="first_name" placeholder="First Name" />
-    </div> 
-    <div class="form-group">      
-      <input type="text" class="form-control" name="middleName" id="middleName" placeholder="Middle Name" />
-     </div> 
-     <div class="form-group">    
-      <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" />
-      </div> <br/> <br/>
-    </p> 
-    <div class="dropdown">
-      <label  for="Date">Date Of Birth</label> &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
-    <input type="date" class="form-control" name="dob" id="dob" placeholder="MM/DD/YYYY">    
-    </div> <br/>
-    <p>
-    <div class="form-group">   
-      <label  for="emailId">Email-id</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  
-      <input type="text"  class="form-control" name="emailId" id="emailId" placeholder="Email Id"/>
-     </div>  <br/> <br/>
-     <div class="form-group">   
-      <label  for="mobileNo">Mobile No.</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
-      <input type="text" class="form-control" name="mobileNo" id="mobileNo" placeholder="Mobile No"/>
-      </div>  <br/> <br/>
-    </p>
-    <p>
-       <div class="form-group">   
-      <label for="address">Address</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-      <textarea name="address" class="form-control" id="address" cols="45" rows="5"></textarea>
-      </div>  <br/> <br/>
-    </p>
-    <p>
-       <div class="form-group">   
-      <label for="city">City</label>&nbsp; &nbsp; 
-      <input type="text" class="form-control" name="city" id="city" placeholder="City"/>
-      </div>  &nbsp; &nbsp; &nbsp; &nbsp;  
-     <div class="form-group">   
-      <label for="pincode">Pincode</label>&nbsp; 
-      <input type="text"  class="form-control" name="pincode" id="pincode" placeholder="Pincode" />
-      </div>  <br/> <br/>
-         <div class="form-group">   
-      <label for="state">State</label>&nbsp; 
-      <input type="text" class="form-control" name="state" id="state" placeholder="State" />
-      </div>  <br/> <br/>
-    </p>
-    <p><div class="well well-sm"><b>KYC Information</b></div></p><br/><p>  
-     <div class="form-group">   
-      <label for="photo">Upload Photo</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-      <input type="file" class="form-control" name="photo" id="photo" placeholder="Photo"/>
-      </div> <br/> <br/>
-    </p>
-    <p>
-     <div class="form-group"> 
-      <label for="addProof">Upload Address Proof</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-      <input type="file" class="form-control" name="addProof" id="addProof" placeholder="Address Proof"/>
-      </div> <br/> <br/>
-    </p>
-    <p>
-     <div class="form-group"> 
-      <label for="setupboxID">Setup Box Id</label> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-      <input type="file" class="form-control" name="setupboxID" id="setupboxID" placeholder="Setup Box Id" />
-      </div> <br/> <br/>
-    </p>
-    <p>
-    <div class="well well-sm"><b>Account Information</b></div> </p><br/>
-    <p>
-    <div class="form-group"> 
-      <label for="zone">Zone</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-      <select class="form-control" name="zone" id="zone">    
-      </select>
-      </div> <br /> <br />
-      <div class="form-group"> 
-      <label for="plan">Plan</label>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-      <select class="form-control" name="plan" id="plan">
-      </select>
-      </div><br /> <br />
-    </p>
-    <p>
-     <div class="form-group"> 
-      <label for="customerID">Customer ID</label>&nbsp; 
-      <input type="text" class="form-control" name="customerID" id="customerID" placeholder="Customer ID"/>   
-      </div>
-      <button type="button" name="generate" id="generate" class="btn btn-success">Generate</button>
-    </p><br/><br/>
-  <p>
-   <div class="form-group" >  
-  <button  type="button" id="submitNewCustomer"   class="btn btn-info ">Submit</button>  
-  </div>
-  </p>
-  </form>
-  <p>&nbsp;</p>
-
-
-  <div class="clear"></div>
-</div>
-
-<div class="cleft">
-
-  <ul>
-  <li><a href="AddUser.html">Add New Customer</a></li>
-  <li><a href="AddNewZone.html">Add New Zone</a></li>
-  <li><a href="CustomerDetails.html">Customer details</a></li>
-  <li><a href="#">Employee Contacts</a></li>
-  <li><a href="#">Pending Complaints</a></li>
-  </ul>
-
-</div>
-
-<div class="clear"> </div>
-
-</div>
-
-
-
-<div class="clear"> </div>
-
-</div>
-
-</body>
-</html> -->
+<%= render 'form'%>
