--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,11 @@
 
 	 <div id="topmenu">
 		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/zones/index">Payment status</a></li>
-			<li><a href="#">Package</a></li>
-			<li><a href="#">Inventory</a></li>
-			<li><%= link_to "Logout", destroy_user_session_path , method: :delete%></li>   
+			<li><%= link_to "Home", root_path ,:class=> "btn btn-large btn-primary" ,method: :get%></li>   
+			<li><%= link_to "Plans", plans_path ,:class=> "btn btn-large btn-primary" ,method: :get%></li>   
+			<li><%= link_to "Customer Managment", customer_path ,:class=> "btn btn-large btn-primary" ,method: :get%></li>   
+			<li><%= link_to "Logout", destroy_user_session_path ,:class=> "btn btn-large btn-primary" ,method: :delete%></li>   
 		</ul>
 	</div> 
 </div>
+
