--- a/app/views/zones/index.html.erb
+++ b/app/views/zones/index.html.erb
@@ -1,20 +1,23 @@
 <h1>Zone</h1><br>
 <table class="table table-striped table-bordered">
 	<tr>
-		<th>Zone Id </th>
+		<th>No</th>
+		<th>Zone Name</th>
 		<th>Engineer</th>
 		<th>Contact</th>
 		<th>Comments</th>
 	</tr>
 	<% @zones.each do |zone| %>
 		<tr>
-			<td><%= zone.id%></td>
-			<td><%= zone.engineer %></td>
-			<td><%= zone.contact%></td>
-			<td><%= zone.comments%></td>
+			<td><%= zone.id %></td>
+			<td><%= zone.name %></td>
+			<td><%= zone.employee.name %></td>
+			<td><%= zone.employee.mobile_no %></td>
+			<td><%= zone.comments %></td>
+			<td><%= link_to 'Edit', edit_zone_path(zone) %></td>
 		</tr>
 	<% end %>
 </table> 
 
 
-<%= button_to('Add Zone', new_zone_path, :class => 'btn btn-large btn-primary',:method => :get)  %>
+<%= button_to('Add Zone', new_zone_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
