--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.file_field :photo %>
     <%= f.file_field :address_proof %>
     <%= f.file_field :setup_box_id %>
-    <%= f.collection_select :zone_id, @zones, :id,:id,:prompt => "Select zone Engineer"%>
+    <%= f.collection_select :zone_id, @zones, :id,:name,:prompt => "Select zone "%>
     <%= f.collection_select :plan_id, @plans, :id,:name, :prompt => "Select one Plan"%>
     <%= f.submit%>
     <p><p><br><br><br>
