--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -13,6 +13,7 @@
 			<td><%= inventory.description %></td>
 			<td><%= inventory.quantity %></td>
 			<td><%= link_to 'Edit', edit_inventory_path(inventory) %></td>
+			<td><%= link_to 'Destroy', inventory ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
