--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 			</div>
 		<%else%>
 			<%= yield %>
-		<%end%>	
+		<%end%>	<br><br>
 		<%= render 'layouts/footer'  if user_signed_in? %>
 	</body>
 </html>
