--- a/app/views/zones/index.html.erb
+++ b/app/views/zones/index.html.erb
@@ -15,6 +15,7 @@
 			<td><%= zone.employee.mobile_no %></td>
 			<td><%= zone.comments %></td>
 			<td><%= link_to 'Edit', edit_zone_path(zone) %></td>
+			<td><%= link_to 'Destroy', zone ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
