--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
     <%= f.text_field :first_name %>
     <%= f.text_field :last_name %>
-    <%= f.date_select :date_of_birth %>
+    <%= f.date_select :date_of_birth, { start_year: 100.years.ago.year, end_year: Date.today.year, default: Date.today} %>
     <%= f.email_field :email_id %>
     <%= f.phone_field :mobile_no %>
     <%= f.text_area :address %>
