--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -11,6 +11,7 @@
 			<td><%= employee.name %></td>
 			<td><%= employee.mobile_no%></td>
 			<td><%= link_to 'Edit', edit_employee_path(employee) %></td>
+			<td><%= link_to 'Destroy', employee ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
