--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Plans</h1><br>
 <table class="table table-striped table-bordered">
 	<tr>
-		<th>Id</th>
+		<th>Plan Id</th>
 		<th>Name</th>
 		<th>Price</th>
 		<th>Plan Details</th>
@@ -13,6 +13,7 @@
 			<td><%= plan.price %></td>
 			<td><%= plan.plan_details %></td>
 			<td><%= link_to 'Edit', edit_plan_path(plan) %></td>
+			<td><%= link_to 'Destroy', plan ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
