--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
 	<div id="footer">
 		<div class="left">
-			Copyright &copy; 2016 by <a href="#">SSTD</a>
+			Copyright &copy; by <a href="#"> Vidhwath Technologies</a>
 		</div>
 
 		<div class="right">
