--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,12 +1,3 @@
-
-#top {
-	background-image:url(header.jpg);
-	padding: 0 10px;
-	height: 70px;
-	line-height: 70px;
-	border-bottom: 5px solid #7599a9;
-}
-
 #header {
 	float: left;
 }
@@ -25,10 +16,21 @@
 	float: right;
 }
 
-
-#topmenu li { 
-	display: inline; 
-	padding: 0 0 0 20px;
+#navlist {
+	 display: table;
 }
 
+ .navli {
+    display: table-cell;
+    padding-right: 10px;
+    padding-top: 5px;
+    white-space: nowrap;
+    list-style-type: none !important;
+}
+
+
+.navbar {
+	background-color: transparent;
+	border-bottom: 5px solid #7599a9 !important;
+} 
 
