--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,7 +1,7 @@
-<%= bootstrap_form_for(@customer,layout: :horizontal,:html => { :multipart => true } )do |f| %>
+<%= bootstrap_form_for(@customer,layout: :horizontal,:html => { :multipart => true },inline_errors: true )do |f| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this Customer from being saved:</h2>
 
       <ul>
       <% @customer.errors.full_messages.each do |message| %>
@@ -16,9 +16,11 @@
     <%= f.email_field :email_id %>
     <%= f.phone_field :mobile_no %>
     <%= f.text_area :address %>
+    <%= f.text_field :customer_friendly_id %>
     <%= f.file_field :photo %>
     <%= f.file_field :address_proof %>
     <%= f.file_field :setup_box_id %>
+    <%= f.text_field :setup_box_number %>
     <%= f.collection_select :zone_id, @zones, :id,:name,:prompt => "Select zone "%>
     <%= f.collection_select :plan_id, @plans, :id,:name, :prompt => "Select one Plan"%>
     <%= f.submit%>
