--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -61,3 +61,8 @@ body {
   .next_page { background: #7777ff; color: white }
   .next_page.disabled { background: white; color: #777 }
 }
+
+
+.alert{
+	background: red;
+}
