--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,13 +4,15 @@
 <table class="table table-striped table-bordered">
 	<tr>
 		<th>Customer Id </th>
+		<th>Customer Friendly Id </th>
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Zone</th>
 	</tr>
 	<% @customers.each do |customer| %>
 		<tr>
-			<td><%= customer.id%></td>
+			<td><%= customer.id %></td>
+			<td><%= customer.customer_friendly_id %></td>
 			<td><%= customer.first_name %></td>
 			<td><%= customer.last_name %></td>
 			<td><%= customer.zone.name %></td>
