--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,12 @@
 	</head>
 	<%= render 'layouts/header' if user_signed_in?  %>
 	<body>
+	<div class="container-fluid">
 		<%= render 'layouts/side_bar' if user_signed_in? %>
+		<% flash.each do |key, value| %>
+    				<div class="alert alert-success %>"><%= value %></div>
+  		<% end %>
+
 		<% if user_signed_in? %>
 			<div class="container_main">
 				<%= yield %>
@@ -16,5 +21,6 @@
 			<%= yield %>
 		<%end%>	<br><br>
 		<%= render 'layouts/footer'  if user_signed_in? %>
+		</div>
 	</body>
 </html>
