--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,13 +1,13 @@
 <h1>Employees</h1><br>
 <table class="table table-striped table-bordered">
 	<tr>
-		<th>Id</th>
+		<th></th>
 		<th>Name</th>
 		<th>Mobile No</th>
 	</tr>
-	<% @employees.each do |employee| %>
+	<% @employees.each_with_index do |employee,index| %>
 		<tr>
-			<td><%= employee.id%></td>
+			<td><%= index+1 %></td>
 			<td><%= employee.name %></td>
 			<td><%= employee.mobile_no%></td>
 			<td><%= link_to 'Edit', edit_employee_path(employee) %></td>
