--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,21 +1,22 @@
-<h1>Customer</h1><br>
-<%= button_to('Download as Excel', customers_path(:format => :xls),:class => 'btn btn-large btn-primary',:method => 'get')%>
+<h1>Customers List</h1><br>
 
 <table class="table table-striped table-bordered">
 	<tr>
+		<th></th>
 		<th>Customer Id </th>
-		<th>Customer Friendly Id </th>
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Zone</th>
+		<th>Plan</th>
 	</tr>
-	<% @customers.each do |customer| %>
+	<% @customers.each_with_index do |customer,index| %>
 		<tr>
-			<td><%= customer.id %></td>
+			<td><%= index +1 %></td>
 			<td><%= customer.customer_friendly_id %></td>
 			<td><%= customer.first_name %></td>
 			<td><%= customer.last_name %></td>
 			<td><%= customer.zone.name %></td>
+			<td><%= customer.plan.name%></td>
 			<td><%= link_to 'Show', customer %></td>
 			<td><%= link_to 'Edit', edit_customer_path(customer) %></td>
 			<td><%= link_to 'Destroy', customer ,method: :delete, data: {confirm: 'Are you sure'} %></td>
@@ -24,4 +25,8 @@
 </table> 
 
 <%= will_paginate @customers %>
+
+<div class="row">
+	<%= button_to('Download as Excel', customers_path(:format => :xls),:class => 'btn btn-large btn-primary',:method => 'get')%><br>
+</div>
 
