--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_for(@plan,layout: :horizontal,:html => { :multipart => true } )do |f| %>
+<%= bootstrap_form_for(@payment,layout: :horizontal,:html => { :multipart => true } )do |f| %>
     <%= f.text_field :name %>
     <%= f.text_field :price %>
     <%= f.text_field :plan_details %>
