--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,16 +1,3 @@
-<%= bootstrap_form_for(@payment,layout: :horizontal,:html => { :multipart => true } )do |f| %>
-  <% if @payment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this payment from being saved:</h2>
+<h2>Edit Payment</h2>
 
-      <ul>
-      <% @payment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-    <%= f.collection_select :payment_id, @zones,:prompt => "Select zone "%>
-    <%= f.submit%>
-    <p><p><br><br><br>
-<% end %>
+<%= render 'form' %>
