--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,19 +1,21 @@
 <h1>Plans</h1><br>
 <table class="table table-striped table-bordered">
 	<tr>
-		<th>Plan Id</th>
+		<th></th>
 		<th>Name</th>
 		<th>Price</th>
 		<th>Plan Details</th>
 	</tr>
-	<% @plans.each do |plan| %>
+	<% @plans.each_with_index do |plan,index| %>
 		<tr>
-			<td><%= plan.id %></td>
+			<td><%= index+1 %></td>
 			<td><%= plan.name %></td>
 			<td><%= plan.price %></td>
 			<td><%= plan.plan_details %></td>
 			<td><%= link_to 'Edit', edit_plan_path(plan) %></td>
-			<td><%= link_to 'Destroy', plan ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
+
+
+<%= button_to('Add Plan', new_plan_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
