--- a/app/views/zones/index.html.erb
+++ b/app/views/zones/index.html.erb
@@ -1,21 +1,21 @@
 <h1>Zone</h1><br>
 <table class="table table-striped table-bordered">
 	<tr>
-		<th>No</th>
-		<th>Zone Name</th>
+		<!-- <th>No</th> -->
+		<th></th>
+		<th>Zone</th>
 		<th>Engineer</th>
 		<th>Contact</th>
 		<th>Comments</th>
 	</tr>
-	<% @zones.each do |zone| %>
-		<tr>
-			<td><%= zone.id %></td>
+	<% @zones.each_with_index do |zone,index| %>
+		<tr>	
+			<td><%= index+1%></td>
 			<td><%= zone.name %></td>
 			<td><%= zone.employee.name %></td>
 			<td><%= zone.employee.mobile_no %></td>
 			<td><%= zone.comments %></td>
 			<td><%= link_to 'Edit', edit_zone_path(zone) %></td>
-			<td><%= link_to 'Destroy', zone ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
