--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,13 @@
-<h1>Customers List</h1><br>
+<div style="position: relative;">
+	<h1>Customers List</h1>
+	<div style="position: absolute; right: 0; top: 0; text-align: right; max-width: 50%; overflow: hidden">
+		<%= form_tag(customers_path, :method => "get", id: "search-form") do %>
+			<%= text_field_tag :search, params[:search], placeholder: "Search Customers" %>
+			<%= submit_tag "Search" %>
+		<% end %>
+	</div>
+</div>
+<br>
 
 <table class="table table-striped table-bordered">
 	<tr>
