--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= bootstrap_form_for(@payment,layout: :horizontal,:html => { :multipart => true } )do |f| %>
-    <%= f.text_field :name %>
-    <%= f.text_field :price %>
-    <%= f.text_field :plan_details %>
+	<%= f.text_field :customer_id %>
+    <%= f.date_field :payment_date %>
+    <%= f.text_field :status %>
     <%= f.submit %>
 <% end %>
