--- a/app/views/complaints/index.html.erb
+++ b/app/views/complaints/index.html.erb
@@ -1,19 +1,20 @@
-<h2> Complaint Log </h2>
+<h2> Complaint Log </h2><br>
 <table class="table table-striped table-bordered">
 	<tr>
 		<th>Id</th>
-		<th>Issue</th>
 		<th>Customer</th>
-		<th>Assigned Employee</th>
+		<th>Employee</th>
+		<th>Issue</th>
+		<th>Status</th>
 	</tr>
-	<% @complaints.each do |complaint| %>
+	<% @complaints.each_with_index do |complaint,index| %>
 		<tr>
-			<td><%= complaint.id %></td>
-			<td><%= complaint.issue %></td>
-			<td><%= complaint.customer.name  %></td>
+			<td><%= index + 1 %></td>
+			<td><%= complaint.customer.first_name  %></td>
 			<td><%= complaint.employee.name  %></td>
-			<td><%= link_to 'Show', complaint %></td>
-			<td><%= link_to 'Edit', edit_comlaint_path(complaint) %></td>
+			<td><%= complaint.issue %></td>
+			<td><%= complaint.status%></td>
+			<td><%= link_to 'Edit', edit_complaint_path(complaint) %></td>
 			<td><%= link_to 'Destroy', complaint ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
