Payment moduke update

--- a/app/views/complaints/index.html.erb
+++ b/app/views/complaints/index.html.erb
@@ -19,3 +19,8 @@
 		</tr>
 	<% end %>
 </table> 
+
+
+<%= button_to('Add Complaint', new_complaint_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
+
+
