--- a/app/views/payments/home.html.erb
+++ b/app/views/payments/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Customer Payment </h1><br>
 <div>
-	<%= form_tag(payments_path, :method => "get", id: "search-form") do %>
-			<%= text_field_tag :search, params[:search], placeholder: "Search Customers" %>
+	<%= form_tag(payments_home_path, :method => "get", id: "search-form") do %>
+			<%= text_field_tag :search, params[:search], placeholder: "Search Customers" %><br><br>
 			<%= submit_tag "Search" %>
 	<% end %>
 </div>
