--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,24 +1,26 @@
-<h2>Payment Status</h2><br>
+<h2> Payment </h2><br>
+<table class="table table-striped table-bordered">
+	<tr>
+		<th></th>
+		<th>Name</th>
+		<th>Payment Month</th>
+		<th>Status</th>
+	</tr>
+	<% @payment.each_with_index do |payment,index|  %>
+	<tr>
+		<td><%= index + 1%></td>
+		<td><%= payment.customer.first_name %></td>
+		<td><%= payment.payment_date.strftime("%B, %Y ") %></td>
+		<td><%= payment.status %></td>
+	</tr>
+	<% end %>
+</table>
 
-	<table class="table table-striped table-bordered">
-		<tr>
-			<th></th>
-			<th>Customer Id </th>
-			<th>First Name</th>
-			<th>Last Name</th>
-			<th>Zone</th>
-		</tr>
-		<% @payment_customers.each_with_index do |payment,index| %>
-			<tr>
-				<td><%= index +1 %></td>
-				<td><%= payment.customer.customer_friendly_id %></td>
-				<td><%= payment.customer.first_name %></td>
-				<td><%= payment.customer.last_name %></td>
-				<td><%= payment.payment_date %></td>
-				<td><%= payment.status %></td>
-				<td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-			</tr>
-		<% end %>
-	</table> 
+<%= will_paginate @payment %>
+
+
+<%= button_to('Add payment', new_payment_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
+
+
 
 
