payment module fixes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
 	<div id="footer">
 		<div class="left">
-			Copyright &copy; by <a href="#"> Vidhwath Technologies</a>
+			Copyright &copy; by <a href="#"> SYST Technologies</a>
 		</div>
 
 		<div class="right">
 		  <p>
-		             Design by <a href="">Vidhwath</a>
+		             Design by <a href="">SYST</a>
 		    </p>
 		</div>
 	</div>	
