--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
 	        <li class="dropdown" style="display: table-cell;padding-right: 10px">
 	          <button type="button" class="btn btn-primary navbar-btn" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Payment <span class="caret"></span></button>
 		          <ul class="dropdown-menu multi-level">
+		          	  <li><a href="/payments/new"> Make Payment</a></li>
 			          <li><a href="/payments/home"> Customer </a></li>
 			          <li><a href="/payments/zone"> Zone </a></li>
 		          </ul>
