--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -6,6 +6,6 @@
 	<ul>
 		<li><a href="/inventories">Inventory Managment</a></li>
 		<li><a href="/employees">Employee Managment</a></li>
-		<li><a href="/complaints">Complains log</a></li>
+		<li><a href="/complaints">Complaints log</a></li>
 	</ul>
 </div>
